# Embeddable-AI-Customer-Support-Widget

./: .gitignore  readme.html  readme.md
Backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  run.sh
Backend/alembic/versions/: 99ea511576c2_refactoring_of_chat_entity.py
Backend/app/: app.py  database.py
Backend/app/chatbot/: chatbotController.py  chatbotService.py
Backend/app/chatbot/dtos/: chatbot.py  chatbot_response.py
Backend/app/chatbot/models/: chat.py
Backend/app/chatbot/prompts/: response-generation.prompt
Backend/app/config/: config.py  settings.py
Backend/app/ingestion/: ingestionController.py  ingestionService.py
Backend/app/ingestion/dtos/: ingestion.py
Backend/app/prompts/: load_prompt.py
Backend/app/prompts/prompt_files/: data-generation-for-ingestion.prompt  response-generation.prompt
Backend/app/stats/: scheduler.py  statsController.py  statsService.py
Backend/app/stats/models/: stats.py
Backend/app/ticket/: ticketController.py  ticketService.py
Backend/app/ticket/dtos/: ticket.py
Backend/app/ticket/models/: ticket.py
Backend/app/users/: usersController.py  usersService.py
Backend/app/users/dtos/: authCode.py  schemas.py
Backend/app/users/models/: enums.py  user.py
Backend/app/utils/: security.py
Documentation/: main.md
Frontend/: index.html
Frontend/scripts/: embed.js
