[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.6",
    "alembic>=1.16.1",
    "fastapi[standard]>=0.112.1",
    "google-generativeai>=0.8.5",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.12",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.30.6",
]
