[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.6",
    "alembic>=1.16.1",
    "apscheduler>=3.11.0",
    "astrapy>=2.0.1",
    "fastapi[standard]>=0.112.1",
    "firecrawl-py>=2.8.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "ruff>=0.11.12",
    "sentry-sdk[fastapi]>=2.30.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.30.6",
    "voyageai>=0.3.2",
]
